# telegram-llm-inference

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
docs/: setup.md
scripts/: lint.sh
src/: __init__.py  main.py
src/bot/: __init__.py  telegram_bot.py
src/config/: settings.py
src/data/: wallet.py
src/llm/: __init__.py  response_generator.py
